# samplemaker

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.cfg
src/boopy/: CMakeLists.txt  README_MAC.txt  boopy.cpp  boopy.pro  deploy.sh
src/samplemaker/: __init__.py  devices.py  documentation.md  gdsreader.py  gdswriter.py  layout.py  makers.py  phc.py  routers.py  sequencer.py  shapes.py  viewers.py
src/samplemaker/baselib/: __init__.py  devices.py  waveguides.py
src/samplemaker/resources/: __init__.py  boopy.pyd  sm_stencil_font.txt
tutorials/: 00_Tutorial_BasicDrawing.py  01_Tutorial_Shapes.py  02_Tutorial_CellReferences.py  03_Tutorial_GroupManipulation.py  04_Tutorial_Boolean.py  05_Tutorial_Devices.py  06_Tutorial_DeviceTables.py  07_Tutorial_Waveguides.py  08_Tutorial_WaveguideDevices.py  09_Tutorial_Circuits.py  10_Tutorial_ElectricalPorts.py  11_Tutorial_LayoutAssembly.py  12_Tutorial_ImportingCircuits.py  CircuitFile.txt  TutorialCollection.py
tutorials/.pylint.d/: 12_Tutorial_LayoutAssembly1.stats
