[metadata]
name = samplemaker
version = 5.0.0
author = Leonardo Midolo
author_email = midolo@nbi.ku.dk
description = Lithographic mask design package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lmidolo/samplemaker/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src